<!--
  ~ Copyright (c) 2024. Eng Ali Rabie +201005886912
  -->

<resources>
    <string name="app_name">Task Project</string>
    <string name="discover_articles">Discover Articles</string>
    <string name="my_favorites">My Favorites</string>
    <string name="discover">Discover</string>
    <string name="my_favorite">My Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="published_at">Published At</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="no_results">No Results</string>
    <string name="no_application_found_to_open_this_link">No application found to open this link</string>
    <string name="error_opening_link">Error opening link: %1$s</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="remove">Remove</string>
</resources>