<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2024. Eng Ali Rabie +201005886912
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.ali.task.main.data.models.Article" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="fitXY"
                imageBinding="@{article.urlToImage}"
                android:src="@drawable/placeholder"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/author"
                    android:textColor="@color/text_color_black">
                </TextView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_12sdp"
                    android:text="@{article.author}"
                    android:textColor="@color/text_color_gray"
                    tool:text="Joel Khalili">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/title"
                    android:textColor="@color/text_color_black">
                </TextView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12sdp"
                    android:text="@{article.title}"
                    android:textColor="@color/text_color_gray"
                    tool:text="The Science of Crypto Forensics Survives a Court Battle—for Now">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/description"
                    android:textColor="@color/text_color_black">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@{article.description}"
                    android:textColor="@color/text_color_gray"
                    tool:text="A jury convicted Roman Sterlingov of money laundering this month. His defense team says it will appeal, saying the crypto-tracing technique at the heart of the case is “pseudoscience.">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/url"
                    android:textColor="@color/text_color_black">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@{article.url}"
                    android:id="@+id/url_btn"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_blue"
                    tool:text="https://www.wired.com/story/the-science-of-crypto-forensics-court-battle">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/published_at"
                    android:textColor="@color/text_color_black">
                </TextView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    bindServerDate="@{article.publishedAt}"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/text_color_gray"
                    tool:text="12/10/2024 00:00">
                </TextView>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_15sdp"
                android:layout_gravity="end"
                android:id="@+id/add_to_fav_btn"
                android:textAllCaps="false"
                android:paddingHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"
                android:backgroundTint="@color/black"
                android:text="@string/add_to_favorite">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>